--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -1,20 +1,20 @@
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-button {
+/* button {
     font-weight: 600;
-}
+} */
 
-.App {
-    text-align: center;
-}
-
+/* .App {
+  text-align: center;
+} */
+/* 
 .App-logo {
     height: 15vmin;
     pointer-events: none;
@@ -76,7 +76,7 @@ button {
     text-decoration: underline;
     display: flex;
     align-items: center;
-}
+} */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
